syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.games";

package com.glance.spaces.zapp.content.games;

import "com/glance/spaces/zapp/content/common/deeplink.proto";
import "com/glance/spaces/zapp/content/common/tag.proto";

message CommunityXxlConfig {
  common.Tag tag = 1;
}