syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.games";

package com.glance.spaces.zapp.content.games;

import "com/glance/spaces/zapp/content/common/deeplink.proto";
import "com/glance/spaces/zapp/content/games/featured_game_xl_element.proto";
import "com/glance/spaces/zapp/content/common/tag.proto";

message FeaturedGameXlConfig {
  common.Deeplink view_more = 1;
  games.FeaturedGameXlElement.TextInfo text_info = 2;
  common.Tag tag = 3;
  common.Tag live = 4;
}