syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.shop";

package com.glance.spaces.zapp.content.shop;

import "com/glance/spaces/zapp/content/common/deeplink.proto";

message TrendingTodayXxlConfig {
  common.Deeplink view_more_trends = 1;
}
