syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.sports";

package com.glance.spaces.zapp.content.sports;

import "com/glance/spaces/zapp/content/common/deeplink.proto";

message HeadlinesXxlConfig {
  common.Deeplink view_more = 1;
}
