package com.glance.spaces.zapp.content;

import com.glance.spaces.zapp.content.WidgetDeeplinkConfig;
import com.glance.spaces.zapp.content.games.CommunityXxlConfig;
import com.glance.spaces.zapp.content.games.EditorsChoiceXxlConfig;
import com.glance.spaces.zapp.content.games.FeaturedGameXlConfig;
import com.glance.spaces.zapp.content.games.InstantGameXxlConfig;
import com.glance.spaces.zapp.content.games.LeaderboardGameLhConfig;
import com.glance.spaces.zapp.content.games.LiveStreamXxlConfig;
import com.glance.spaces.zapp.content.games.NewArrivalsXlConfig;
import com.glance.spaces.zapp.content.games.RecentlyPlayedGamesMdConfig;
import com.glance.spaces.zapp.content.games.TopInstantGameXlConfig;
import com.glance.spaces.zapp.content.games.TopThreeMxlConfig;
import com.glance.spaces.zapp.content.games.w;
import com.glance.spaces.zapp.content.roposo.TrendsXxlConfig;
import com.glance.spaces.zapp.content.shop.TrendingTodayXxlConfig;
import com.glance.spaces.zapp.content.sports.HeadlinesXxlConfig;
import com.glance.spaces.zapp.content.sports.LeagueMatchXxlConfig;
import com.glance.spaces.zapp.content.sports.StandingsXxlConfig;
import com.glance.spaces.zapp.content.sports.TeamMatchXxlConfig;
import com.google.protobuf.MessageOrBuilder;
import com.zapp.oneweatherzapp.dx4;
import com.zapp.oneweatherzapp.ff2;
import com.zapp.oneweatherzapp.jv1;
import com.zapp.oneweatherzapp.mk1;
import com.zapp.oneweatherzapp.nc2;
import com.zapp.oneweatherzapp.ox4;
import com.zapp.oneweatherzapp.qh4;
import com.zapp.oneweatherzapp.s10;
import com.zapp.oneweatherzapp.st;
import com.zapp.oneweatherzapp.su0;
import com.zapp.oneweatherzapp.tq4;
import com.zapp.oneweatherzapp.uy2;
import com.zapp.oneweatherzapp.x05;
import com.zapp.oneweatherzapp.y05;
/* compiled from: WidgetDeeplinkConfigOrBuilder.java */
/* loaded from: classes2.dex */
public interface p extends MessageOrBuilder {
    CategorizedLvXxlConfig getCategorizedLvXxl();

    st getCategorizedLvXxlOrBuilder();

    CommunityXxlConfig getCommunityXxl();

    s10 getCommunityXxlOrBuilder();

    EditorsChoiceXxlConfig getEditorsChoiceXxl();

    su0 getEditorsChoiceXxlOrBuilder();

    FeaturedGameXlConfig getFeaturedGameXl();

    com.glance.spaces.zapp.content.games.e getFeaturedGameXlOrBuilder();

    HeadlinesXxlConfig getHeadlinesXxl();

    mk1 getHeadlinesXxlOrBuilder();

    InstantGameXxlConfig getInstantGameXxl();

    jv1 getInstantGameXxlOrBuilder();

    LeaderboardGameLhConfig getLeaderboardLh();

    com.glance.spaces.zapp.content.games.m getLeaderboardLhOrBuilder();

    LeagueMatchXxlConfig getLeagueMatchXxl();

    nc2 getLeagueMatchXxlOrBuilder();

    LiveStreamXxlConfig getLiveStreamXxl();

    ff2 getLiveStreamXxlOrBuilder();

    NewArrivalsXlConfig getNewArrivalsGameXl();

    uy2 getNewArrivalsGameXlOrBuilder();

    RecentlyPlayedGamesMdConfig getRecentlyPlayedGamesMd();

    w getRecentlyPlayedGamesMdOrBuilder();

    StandingsXxlConfig getStandingsXxl();

    qh4 getStandingsXxlOrBuilder();

    TeamMatchXxlConfig getTeamMatchXxl();

    tq4 getTeamMatchXxlOrBuilder();

    TopInstantGameXlConfig getTopInstantGameXl();

    dx4 getTopInstantGameXlOrBuilder();

    TopThreeMxlConfig getTopThreeMxl();

    ox4 getTopThreeMxlOrBuilder();

    TrendingTodayXxlConfig getTrendingTodayXxl();

    x05 getTrendingTodayXxlOrBuilder();

    TrendsXxlConfig getTrendsXxl();

    y05 getTrendsXxlOrBuilder();

    WidgetDeeplinkConfig.TypedElementCase getTypedElementCase();

    boolean hasCategorizedLvXxl();

    boolean hasCommunityXxl();

    boolean hasEditorsChoiceXxl();

    boolean hasFeaturedGameXl();

    boolean hasHeadlinesXxl();

    boolean hasInstantGameXxl();

    boolean hasLeaderboardLh();

    boolean hasLeagueMatchXxl();

    boolean hasLiveStreamXxl();

    boolean hasNewArrivalsGameXl();

    boolean hasRecentlyPlayedGamesMd();

    boolean hasStandingsXxl();

    boolean hasTeamMatchXxl();

    boolean hasTopInstantGameXl();

    boolean hasTopThreeMxl();

    boolean hasTrendingTodayXxl();

    boolean hasTrendsXxl();
}
